リバースプロキシで複数指定できるように実装

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -19,7 +19,7 @@ command=sh /cron-startup.sh
 
 # 起動時スクリプト
 [program:start]
-command=sh /start.sh
+command=bash /start.sh
 autorestart=unexpected
 stdout_logfile=/var/log/supervisor/start.log
 stdout_logfile_maxbytes=1MB
