basic認証機能を追加

--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -16,6 +16,9 @@ services:
             DOMAIN: 'takuto.gakusmemo.com' # site domain
             STAGE: 'staging' # staging or production
             REVERSE_PROXY: '/->http://nginx2/, /management/->http://nginx3/'
+            BASIC_AUTH: 'true'
+            BASIC_USER: 'gaku'
+            BASIC_PASSWORD: 'testtest'
     nginx2:
         image: nginx:1.13.8
     nginx3:
